fix a citation rendering issue

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -791,7 +791,7 @@ How does word recognition change across early childhood and how does it relate t
 
 Together, our findings are consistent with theories that posit that language learning is a process of skill acquisition, in which children become adept at quickly converting ephemeral signals into meaning [@christiansen2016]. This skill develops gradually over the course of early childhood and supports word learning. Further, our results point to consistency between skill development in early childhood and the continued refinement of language processing and language knowledge during middle childhood [@mcmurray2022slow;@colby2023efficiency].
 
-By aggregating data from many pre-existing studies, we were able to overcome the limitations of prior investigations, which typically had sample sizes at least an order of magnitude smaller than ours. In contrast to individual studies, which typically have at best the statistical power to test one or two specific contrasts, our "big data" approach provided the sample sizes necessary to fit complex structural equation models and to compare different functional forms for developmental change. Because early language is so variable [@frank2021], these kinds of samples -- with thousands, rather than dozens of children -- are likely to be required to gain further insight into the psychometrics of early language learning [bergelson2023;@frank2017;@frank2021;@manybabies2020]. 
+By aggregating data from many pre-existing studies, we were able to overcome the limitations of prior investigations, which typically had sample sizes at least an order of magnitude smaller than ours. In contrast to individual studies, which typically have at best the statistical power to test one or two specific contrasts, our "big data" approach provided the sample sizes necessary to fit complex structural equation models and to compare different functional forms for developmental change. Because early language is so variable [@frank2021], these kinds of samples -- with thousands, rather than dozens of children -- are likely to be required to gain further insight into the psychometrics of early language learning [@bergelson2023;@frank2017;@frank2021;@manybabies2020]. 
 
 At the same time, our approach is both observational and exploratory. Thus, we cannot untangle the range of different causal models that explain the variation we observed. First, early word recognition skill could lead to faster word learning, due to skilled children gleaning more information from the same signal [@fernald2006]. But second, faster children could also be faster due to their larger vocabulary and stronger lexical representations. These two causal directions could also interact reciprocally, leading to a "rich get richer" process in which children with larger vocabularies process faster, and their faster processing helps them increase their vocabulary size more rapidly. Finally, a third shared factor -- perhaps general cognitive ability -- could underpin both processes. Our cross-sectional data cannot distinguish these hypotheses even in principle [@vanderweele2023dimensional], and our longitudinal data are likely too sparse to distinguish such complex causal models. Thus, these questions remain an open target for dense longitudinal data collection.
 
