--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -92,7 +92,7 @@ Munich, Germany}
 \significancestatement{The efficiency with which children recognize
 words provides a measurement of their real-time language processing,
 which has been argued to be a key part of the language learning process.
-Her, we use a large dataset of eye-tracking data from many different
+Here, we use a large dataset of eye-tracking data from many different
 experiments to map out the development of word recognition, finding that
 this process becomes faster, more accurate, and less variable in the
 period between one and six years of age, and that children who are
@@ -111,7 +111,8 @@ be addressed. E-mail:
 \href{mailto:mcfrank@stanford.edu}{\nolinkurl{mcfrank@stanford.edu}}}
 
 % Keywords are not mandatory, but authors are strongly encouraged to provide them. If provided, please include two to five keywords, separated by the pipe symbol, e.g:
- \keywords{  one |  two |  optional |  optional |  optional  } 
+ \keywords{  language development |  word recognition |  developmental
+change |  skill acquisition |  eye-tracking  } 
 
 \begin{abstract}
 Being a fluent language user involves recognizing words as they unfold
@@ -538,8 +539,7 @@ structural equation models and to compare different functional forms for
 developmental change. Because early language is so variable (2), these
 kinds of samples -- with thousands, rather than dozens of children --
 are likely to be required to gain further insight into the psychometrics
-of early language learning
-{[}\href{mailto:bergelson2023;@frank2017}{\nolinkurl{bergelson2023;@frank2017}};(2);(43){]}.
+of early language learning (2, 43--45).
 
 At the same time, our approach is both observational and exploratory.
 Thus, we cannot untangle the range of different causal models that
@@ -553,7 +553,7 @@ with larger vocabularies process faster, and their faster processing
 helps them increase their vocabulary size more rapidly. Finally, a third
 shared factor -- perhaps general cognitive ability -- could underpin
 both processes. Our cross-sectional data cannot distinguish these
-hypotheses even in principle (44), and our longitudinal data are likely
+hypotheses even in principle (46), and our longitudinal data are likely
 too sparse to distinguish such complex causal models. Thus, these
 questions remain an open target for dense longitudinal data collection.
 
@@ -847,15 +847,28 @@ Intelligence} 6(1):8.}
 the intra-individual variability hypothesis in explaining individual
 differences in language development.}
 
-\bibitem[\citeproctext]{ref-manybabies2020}
+\bibitem[\citeproctext]{ref-bergelson2023}
 \CSLLeftMargin{43. }%
+\CSLRightInline{Bergelson E, et al. (2023) Everyday language input and
+production in 1,001 children from six continents. \emph{Proceedings of
+the National Academy of Sciences of the United States of America}
+120(52):e2300671120.}
+
+\bibitem[\citeproctext]{ref-frank2017}
+\CSLLeftMargin{44. }%
+\CSLRightInline{Frank MC, Braginsky M, Yurovsky D, Marchman VA (2017)
+{Wordbank: An open repository for developmental vocabulary data}.
+\emph{Journal of Child Language} 44(3):677--694.}
+
+\bibitem[\citeproctext]{ref-manybabies2020}
+\CSLLeftMargin{45. }%
 \CSLRightInline{The ManyBabies Consortium (2020) {Quantifying sources of
 variability in infancy research using the infant-directed speech
 preference}. \emph{Advances in Methods and Practices in Psychological
 Science} 3(1):24--52.}
 
 \bibitem[\citeproctext]{ref-vanderweele2023dimensional}
-\CSLLeftMargin{44. }%
+\CSLLeftMargin{46. }%
 \CSLRightInline{VanderWeele TJ, Batty CJ (2023) On the dimensional
 indeterminacy of one-wave factor analysis under causal effects.
 \emph{Journal of Causal Inference} 11(1):20220074.}
