correct timing windows

--- a/1_get_data.qmd
+++ b/1_get_data.qmd
@@ -30,12 +30,12 @@ load(file = here("..", "peekbank-method", "cached_intermediates", "1_d_aoi.Rds")
 We have been worrying about windows, but let's just do two windows:
 
 1. classic short: 200 - 2000
-2. ICC maximizing long: 500 - 4000 - our analysis suggests this maximizes stability of individual differences (albeit not necessarily differences in language)
+2. ICC maximizing long: 200 - 4000 - our analysis suggests this maximizes stability of individual differences (albeit not necessarily differences in language)
 
 ```{r}
 d_trial <- d_aoi |>
   mutate(short_window = t_norm > 200 & t_norm <= 2000,
-         long_window = t_norm > 500 & t_norm <= 4000) |>
+         long_window = t_norm > 200 & t_norm <= 4000) |>
   group_by(dataset_name, dataset_id, administration_id, subject_id,
            trial_id, age, target_label, distractor_label) |>
   summarise(short_window_accuracy = mean(correct[short_window], na.rm=TRUE),
@@ -172,7 +172,7 @@ d_trial |>
             average_prop_data_short = mean(short_window_prop_data, na.rm=TRUE),
             average_prop_data_long = mean(long_window_prop_data, na.rm=TRUE),
             prop_rts = mean(!is.na(rt)), 
-            log_age = log(age)) |>
+            log_age = log(mean(age,na.rm=TRUE))) |>
   arrange(desc(n)) |>
   kable(digits = 2)
 ```
